hphp/test/zend/good/ext/mbstring/tests/mb_encode_mimeheader_variation4.php.skipif
<?php
extension_loaded('mbstring') or die('skip');
function_exists('mb_encode_mimeheader') or die("skip mb_encode_mimeheader() is not available in this build");
?>