hphp/test/zend/bad/ext/mbstring/tests/mb_substr_basic.php.skipif
<?php
extension_loaded('mbstring') or die('skip');
function_exists('mb_substr') or die("skip mb_substr() is not available in this build");
?>